[package]
name = "tokio-util"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]

[dependencies]
tokio-channel = "0.1"
tokio = "0.1"

serde_derive = { version = "1.0.27", optional = true }
serde = { version = "1.0.27", optional = true }

[features]
default = ["serde-impls"]
serde-impls = [
    "serde_derive",
    "serde",
]
